--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosConsultas/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PrestamosConsultas/Index.cshtml
@@ -1,34 +1,17 @@
 ﻿@model Core.Erp.Info.Helps.cl_filtros_Info
 @{
-    ViewBag.Title = "Aprobación de prestamos";
+    ViewBag.Title = "Prestamos";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
     }
     Layout = "~/Views/Layout/_LayoutConsulta.cshtml";
 }
+<script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-<script type="text/javascript">
-    var selectedIDs;
-
-    function OnBeginCallback(s, e) {
-        //Pass all selected keys to GridView callback action
-        e.customArgs["selectedIDs"] = selectedIDs;
-        e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
-    }
-    function OnSelectionChanged(s, e) {
-        s.GetSelectedFieldValues("IdPrestamo", GetSelectedFieldValuesCallback);
-
-    }
-    function GetSelectedFieldValuesCallback(values) {
-        //Capture all selected keys
-        selectedIDs = values.join(',');
-    }
-</script>
-@using (Html.BeginForm("Index", "PrestamosAprobacion", FormMethod.Post, new { @role = "form", @class = "form", @id = "myform" }))
+@using (Html.BeginForm())
 {
-    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
-    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -47,49 +30,13 @@
         </div>
         <div class="box-body">
             <div class="row">
-                <div class="col-md-12">
-                   
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="">Fecha inicio*</label>
-                            <div class="input-group date">
-                                <div class="input-group-addon">
-                                    <i class="fa fa-calendar"></i>
-                                </div>
-                                @Html.DevExpress().DateEditFor(q => q.fecha_ini, settings =>
-                           {
-                               settings.Name = "fecha_ini";
-                               settings.Properties.UseMaskBehavior = true;
-                               settings.Properties.EditFormat = EditFormat.Date;
-                               settings.Properties.EditFormatString = "dd/MM/yyyy";
-                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                           }).GetHtml()
-                                @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="">Fecha fin*</label>
-                            <div class="input-group date">
-                                <div class="input-group-addon">
-                                    <i class="fa fa-calendar"></i>
-                                </div>
-                                @Html.DevExpress().DateEditFor(q => q.fecha_fin, settings =>
-                           {
-                               settings.Name = "fecha_fin";
-                               settings.Properties.UseMaskBehavior = true;
-                               settings.Properties.EditFormat = EditFormat.Date;
-                               settings.Properties.EditFormatString = "dd/MM/yyyy";
-                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                           }).GetHtml()
-                                @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
+                 <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdProveedor">Empleado*</label>
+                    @Html.Partial("_CmbEmpleado_prestamo_consulta", Model.IdEmpleado)
+                    @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
                 </div>
+            </div>
             </div>
         </div>
         <!-- /.box-body -->
@@ -108,16 +55,21 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_prestamos_aprobacion", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
-        </div>
-        <div class="box-body">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <button type="button" class="btn btn-success" id="btn_aprobar" onclick="aprobar();">Aprobar</button>
-                            @*<button type="button" class="btn btn-danger" id="btn_rechazar" onclick="aprobar();">Anular</button>*@
-                        </div>
+                    <div class="form-group">
+                        <label for="IdProveedor">Historial de prestamos</label>
+                        @Html.Action("GridViewPartial_prestamos_consulta", new { Model.IdEmpleado })
+                        @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label for="IdProveedor">Detalle prestamos</label>
+                        @Html.Partial("_CmbEmpleado_prestamo_consulta_det", Model.IdEmpleado)
+                        @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
@@ -128,34 +80,8 @@
         </div>
         <!-- /.box-footer-->
     </div>
+
+
 }
-<script type="text/javascript">
-     function aprobar() {
-        var datos = {
-            IdEmpresa: $("#IdEmpresa").val(),
-            IDs: selectedIDs,
-            }
-        $("#btn_aprobar").attr("disabled", true);
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("aprobar", "PrestamosAprobacion", new { Area = "RRHH" })',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                if (data == false) {
-                    alert("Parametrizar cuentas contables en tipo de orden de pago por empresa");
-                }
-                else {
-                    $("#myform").submit();
-                }                                
-            },
-            error: function (error) {
-            }
-        });
-    }
-</script>
+
 
