--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
@@ -377,32 +377,12 @@
                                 @Html.ValidationMessageFor(q => q.IdEmpleado_Supervisor, "", new { @class = "text-danger" })
                             </div>
                         </div>
-
                     </div>
-
-
-
-
                     <div class="col-md-6">
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="IdDivision">División*</label>
-                                @Html.DevExpress().ComboBoxFor(q => q.IdDivision, settings =>
-                               {
-                                   settings.Name = "IdDivision";
-                                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                                   settings.Properties.Columns.Add("IdDivision", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                                   settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                                   //Campo ID
-                                   settings.Properties.ValueField = "IdDivision";
-                                   settings.Properties.ValueType = typeof(int);
-                                   settings.Properties.TextField = "Descripcion";
-                                   //Boton para seleccionar ningun registro
-                                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-                               }).BindList(ViewBag.lst_division).GetHtml()
+                                @Html.Partial("_CmbDivision", Model.IdDivision)
                                 @Html.ValidationMessageFor(q => q.IdDivision, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -410,22 +390,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="IdArea">Área*</label>
-                                @Html.DevExpress().ComboBoxFor(q => q.IdArea, settings =>
-                               {
-                                   settings.Name = "IdArea";
-                                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                                   settings.Properties.Columns.Add("IdArea", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                                   settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                                   //Campo ID
-                                   settings.Properties.ValueField = "IdArea";
-                                   settings.Properties.ValueType = typeof(int);
-                                   settings.Properties.TextField = "Descripcion";
-                                   //Boton para seleccionar ningun registro
-                                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-                               }).BindList(ViewBag.lst_area).GetHtml()
+                                @Html.Partial("_CmbArea", Model.IdArea)
                                 @Html.ValidationMessageFor(q => q.IdArea, "", new { @class = "text-danger" })
                             </div>
                         </div>
