--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Modificar.cshtml
@@ -52,8 +52,10 @@
 
         <div class="col-md-1">
             <div class="form-group">
-                <label for=""></label>
-                <a type="button" class="btn btn-primary form-control " href="@Url.Action("Nuevo","Proveedor",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)" target="_blank">+</a>
+                <label for="IdCliente"></label>
+                <button type="button" class="btn btn-primary form-control " onclick="CrearModificarProveedor();">
+                    <i class="fa fa-external-link-square"></i>
+                </button>
             </div>
         </div>
     </div>
