--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/Nuevo.cshtml
@@ -84,6 +84,17 @@
         GridView_aprobacion_solicitud.PerformCallback();
         $("#ModalFacturas").modal("hide");
     }
+     function CrearModificarProveedor() {
+        if(IdProveedor.GetValue() > 0)
+        {
+            var win = window.open(window.location.origin + "/CuentasPorPagar/Proveedor/Modificar?IdEmpresa=" +@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdProveedor="+IdProveedor.GetValue(), '_blank');
+            win.focus();
+        }else
+        {
+            var win = window.open(window.location.origin+"/CuentasPorPagar/Proveedor/Nuevo?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa, '_blank');
+            win.focus();
+        }
+    }
 </script>
 
 @using (Html.BeginForm("Nuevo", "SolicitudPago", FormMethod.Post, new { @class = "form", @role = "form" }))
@@ -166,11 +177,19 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="col-md-6">
+                        <div class="col-md-5">
                             <div class="form-group">
                                 <label for="IdProveedor">Proveedor*</label>
                                 @Html.Partial("_CmbProveedor_CXP", Model.IdProveedor)
                                 @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-md-1">
+                            <div class="form-group">
+                                <label for="IdCliente"></label>
+                                <button type="button" class="btn btn-primary form-control " onclick="CrearModificarProveedor();">
+                                    <i class="fa fa-external-link-square"></i>
+                                </button>
                             </div>
                         </div>
                         <div class="col-md-4">
