--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_CmbArea.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_CmbArea.cshtml
@@ -16,6 +16,8 @@
         settings.Properties.Columns.Add("IdArea", "ID", 10);
         settings.Properties.Columns.Add("Descripcion", "Descripcion", 90);
         settings.Properties.FilterMinLength = 3;
+        settings.Properties.FilterMinLength = 3;
+        settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdDivision'] =  IdDivision.GetValue(); }";
     })
      .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.EmpleadoController().get_list_bajo_demanda_area, new Core.Erp.Web.Areas.RRHH.Controllers.EmpleadoController().get_info_bajo_demanda_area)
     .Bind((Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_empleado_Info) || Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_empleado_Info) || Model.GetType() == typeof(List<Core.Erp.Info.RRHH.ro_empleado_Info>)) ? "" : Model);
