--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
@@ -539,7 +539,7 @@
         {
            // var win = window.open(window.location.hostname + "/Facturacion/Cliente/Nuevo?IdEmpresa=" +@Core.Erp.Web.Helps.SessionFixed.IdEmpresa, '_blank');
           //win.focus();
-             window.location.href = '@Url.Action("Nuevo", "Cliente", new { Area = "Facturacion" , IdEmpresa= @Core.Erp.Web.Helps.SessionFixed.IdEmpresa + "&IdCliente=" + IdCliente.GetValue() })';
+           //  window.location.href = '@Url.Action("Nuevo", "Cliente", new { Area = "Facturacion" , IdEmpresa= @Core.Erp.Web.Helps.SessionFixed.IdEmpresa + "&IdCliente=" + IdCliente.GetValue() })';
         }
     }
 </script>
