--- a/ERP/Core.Erp.Web/Areas/General/Views/ComprobantesSinAutorizacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/ComprobantesSinAutorizacion/Index.cshtml
@@ -28,6 +28,7 @@
 </script>
 @using (Html.BeginForm("Index", "ComprobantesSinAutorizacion",FormMethod.Post,new { @role = "form", @id = "myform" }))
 {
+    @Html.HiddenFor(q=> q.IdEmpresa)
     <div class="box">
         <div class="box-header with-border">
             <div class="row">
@@ -48,6 +49,13 @@
         <div class="box-body">
             <div class="row">
                 <div class="col-md-12">                 
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="IdSucursal">Sucursal*</label>
+                            @Html.DropDownListFor(q=> q.IdSucursal, new SelectList(ViewBag.lst_sucursal,"IdSucursal","Su_Descripcion"),new { @id = "IdSucursal", @class = "form-control"})
+                            @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
                     <div class="col-md-2">
                         <div class="form-group">
                             <label for="">Fecha inicio*</label>
@@ -107,7 +115,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_documentos_pendientes_enviar_sri", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin })
+            @Html.Action("GridViewPartial_documentos_pendientes_enviar_sri", new {Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal })
         </div>
        
         <!-- /.box-body -->
